--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 table {
-	font-family: 'Arial', sans-serif:
+	font-family: 'Arial', sans-serif;
 	color: black;
 	background: black;
 	margin: 80px auto;
@@ -20,7 +20,7 @@ table {
 
 th {
 	color: rgb(255, 255, 0);
-	font-size: 40px
+	font-size: 22px;
 	text-align: center;
 	margin-top: 50px;
 	padding: 10px;
